--- a/Assets/Plugins/UnityLocalize/Editor/UnityLocalize-Editor.asmdef
+++ b/Assets/Plugins/UnityLocalize/Editor/UnityLocalize-Editor.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "UnityLocalize-Editor",
     "references": [
-        "UnityLocalize"
+        "Environment-Editor",
+        "UnityLocalize",
+        "EDraw-Editor",
+        "Environment"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
